--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<div *ngFor="let user of users">
-    {{user.id}}-{{user.userName}}
+
+<app-nav></app-nav>
+<div class="container" style="margin-top:100px;">
+    <div *ngFor="let user of users">
+        {{user.id}}-{{user.userName}}
+    </div>
 </div>
