--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 
 <app-nav></app-nav>
 <div class="container" style="margin-top:100px;">
-    <div *ngFor="let user of users">
-        {{user.id}}-{{user.userName}}
-    </div>
+    <app-home></app-home>
 </div>
