--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -3,7 +3,7 @@
       <a class="navbar-brand" href="#">Dating App</a>
      
      
-        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="logIn">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#">Matches</a>
           </li>
@@ -13,11 +13,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Message</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" (click)="logout()" href="#" tabindex="-1" aria-disabled="true">LogOut</a>
-          </li>
+        
         </ul>
-        <div class="dropdown" *ngIf="logIn" dropdown>
+        <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
           <a  class="dropdown-toggle text-light" dropdownToggle>Welcome User</a>
           <div class="dropdown-menu" *dropdownMenu="">
               <a  class="dropdown-item">Edit Profile</a>
@@ -25,7 +23,7 @@
               <a  class="dropdown-item" (click)="logout()">logout</a>
           </div>
         </div>
-        <form #loginForm="ngForm" class="d-flex" (ngSubmit)="login()"*ngIf="!logIn">
+        <form #loginForm="ngForm" class="d-flex" (ngSubmit)="login()"*ngIf="(accountService.currentUser$ | async)==null">
           <input [(ngModel)]="model.userName" name="userName" class="form-control me-2" type="text" placeholder="UserName" >
           <input class="form-control me-2" [(ngModel)]="model.password"  name="password"type="password" placeholder="Password" >
           <button class="btn btn-outline-success" type="submit">Login</button>
