--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,8 +8,10 @@
     </div>
 </div>
 <div *ngIf="registerMode" class="container">
-    <div class="row text-center">
-        <p>Register form go here</p>
+    <div class="row  justify-content-center">
+        <div  class="col-4">
+        <app-register (cancelRegister)="CancelRegisterMode($event)"></app-register>
+        </div>
     </div>
 </div>
 </div>
