--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-
-/* Importing Bootstrap SCSS file. */
+@import "~bootswatch/dist/united/_variables.scss";
 @import "~bootstrap/scss/bootstrap";
+@import "~bootswatch/dist/united/_bootswatch.scss";
+/* Importing Bootstrap SCSS file. */
+
 
 /* Importing Datepicker SCSS file. */
 @import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
