--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -14,9 +14,12 @@
             <li class="nav-item">
               <a class="nav-link" routerLink="/messages" routerLinkActive="active">Message</a>
             </li>
+           
           </ng-container>
          
-        
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/errors" routerLinkActive="active">Errors</a>
+          </li>
         </ul>
         <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
           <a  class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.userName |titlecase}}</a>
