--- a/src/app/members/member-detail/member-detail.component.html
+++ b/src/app/members/member-detail/member-detail.component.html
@@ -14,6 +14,10 @@
                     <p>{{member.age}}</p>
                 </div>
                 <div>
+                    <strong>Last Active:</strong>
+                    <p>{{member.lastActive}}</p>
+                </div>
+                <div>
                     <strong>Member since:</strong>
                     <p>{{member.created}}</p>
                 </div>
