--- a/src/app/members/member-edit/member-edit.component.html
+++ b/src/app/members/member-edit/member-edit.component.html
@@ -33,7 +33,7 @@
             </div>
             <div class="card-footer">
                 <div class="btn-group d-flex">
-                    <button class="btn btn-success btn-block">Save Changes</button>
+                    <button [disabled]="!editForm.dirty" form="editForm" type="submit" class="btn btn-success btn-block">Save Changes</button>
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
             <tabset class="member-tabset">
                 <tab heading='About {{member.knownAs}}'>
                     
-                    <form >
+                    <form #editForm="ngForm" id="editForm" (ngSubmit)="updateMember()">
                         <h4>Description</h4>
                     <textarea class="form-control" [(ngModel)]="member.introduction" name="introduction" rows="6"></textarea>
                    
