--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
 
 /* Importing Datepicker SCSS file. */
 @import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
-
+@import"/node_modules/ngx-spinner/animations/line-scale-party";
 .tab-panel {
     border: 1px solid #ddd;
     padding: 10px;
