--- a/src/app/members/member-edit/member-edit.component.html
+++ b/src/app/members/member-edit/member-edit.component.html
@@ -65,7 +65,7 @@
                 </tab>
                 <tab heading='Edit Photos'>
                     
-                    <p>Photo edit will go here</p>                   
+                   <app-photo-editor></app-photo-editor>           
                 </tab>
                 
              
