--- a/src/app/members/member-edit/member-edit.component.html
+++ b/src/app/members/member-edit/member-edit.component.html
@@ -65,7 +65,7 @@
                 </tab>
                 <tab heading='Edit Photos'>
                     
-                   <app-photo-editor></app-photo-editor>           
+                   <app-photo-editor [member]="member"></app-photo-editor>           
                 </tab>
                 
              
