--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -66,14 +66,33 @@
 
     <form [formGroup]='registerForm' (ngSubmit)="register()">
         <h2 class="text-center text-primary">Sign Up</h2>
-        <app-text-input 
+     <label class="control-label" style="margin-right: 10px;">I am a:</label> 
+     <label class="radio-inline">
+        <input type="radio"value='male' formControlName='gender'> Male
+     </label>  
+     <label class="radio-inline">
+        <input  type="radio" value='female' formControlName='gender' style="margin-left: 10px;"> Female
+     </label>  
+    <app-text-input 
         [formControl]='registerForm.controls["userName"]'[label]='"UserName"'>
     </app-text-input>
-        <app-text-input 
-        [formControl]='registerForm.controls["password"]'[label]='"Password"' [type]='"password"'>
+    <app-text-input 
+    [formControl]='registerForm.controls["knownAs"]'[label]='"Known As"'>
     </app-text-input>
-        <app-text-input 
-        [formControl]='registerForm.controls["confirmPassword"]'[label]='"confirmPassword"' [type]='"password"'>
+    <app-text-input 
+    [formControl]='registerForm.controls["dateOfBirth"]'[label]='"Date Of Birth"'>
+    </app-text-input>
+    <app-text-input 
+    [formControl]='registerForm.controls["city"]'[label]='"City"'>
+    </app-text-input>
+    <app-text-input 
+    [formControl]='registerForm.controls["country"]'[label]='"Country"'>
+    </app-text-input>
+    <app-text-input 
+    [formControl]='registerForm.controls["password"]'[label]='"Password"' [type]='"password"'>
+    </app-text-input>
+    <app-text-input 
+    [formControl]='registerForm.controls["confirmPassword"]'[label]='"confirmPassword"' [type]='"password"'>
     </app-text-input>
       
         <div class="form-group text-center">
