--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -79,9 +79,9 @@
     <app-text-input 
     [formControl]='registerForm.controls["knownAs"]'[label]='"Known As"'>
     </app-text-input>
-    <app-text-input 
-    [formControl]='registerForm.controls["dateOfBirth"]'[label]='"Date Of Birth"'>
-    </app-text-input>
+    <app-date-input
+    [formControl]='registerForm.controls["dateOfBirth"]' [maxDate]="maxDate" [label]='"Date Of Birth"'>
+    </app-date-input>
     <app-text-input 
     [formControl]='registerForm.controls["city"]'[label]='"City"'>
     </app-text-input>
