--- a/src/app/members/member-list/member-list.component.html
+++ b/src/app/members/member-list/member-list.component.html
@@ -4,3 +4,28 @@
         <app-member-card [member]="member"></app-member-card>
     </div>
 </div>
+<!-- <div class="d-flex justify-content-center" *ngIf="pagination">
+    <pagination [boundaryLinks]="true" [totalItems]="77"
+            previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+ {
+  "currentPage": 1,
+  "itemPerPage": 5,
+  "totalItem": 25,
+  "totalPages": 5
+}
+</pagination>
+</div> -->
+<div class="d-flex justify-content-center" *ngIf="pagination">
+    <!-- <pre>{{pagination|json}}</pre> -->
+    <pagination 
+    [boundaryLinks]="true" 
+    [totalItems]="pagination.totalItem"
+    [itemsPerPage]="pagination.itemPerPage"
+    [(ngModel)]="pagination.currentPage"
+    (pageChanged)="pageChangedeve($event)"
+     previousText="&lsaquo;"
+     nextText="&rsaquo;" 
+     firstText="&laquo;"
+      lastText="&raquo;">
+  
+</pagination>
