--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -22,7 +22,7 @@
           </li>
         </ul>
         <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
-          <img src="{{user.photoUrl}}" alt="{{user.userName}}">
+          <img src="{{user.photoUrl}}" alt="{{user.knownAs}}">
           <a  class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.userName |titlecase}}</a>
           <div class="dropdown-menu" *dropdownMenu="">
               <a routerLink="/member/edit" class="dropdown-item">Edit Profile</a>
