--- a/src/app/members/member-list/member-list.component.html
+++ b/src/app/members/member-list/member-list.component.html
@@ -1,3 +1,60 @@
+<div class="text-center mt-3">
+    <h2 *ngIf="pagination">Your matches - {{pagination.totalItem}} found</h2>
+</div>
+<form #form="ngForm" class="form-inline mb-3 " (ngSubmit)="loadMembers()" autocomplete="off">
+    <div class="row align-items-center g-3">
+        <div class="col-md-auto col-12">
+            <label class="form-label d-md-none" >Age from: </label>
+            <input type="number" class="form-control ml-1"
+                    style="width: 70px" name="minAge"[(ngModel)]="userParams.minAge">
+        </div>
+        <div class="col-md-auto col-12">
+            <label class="form-label d-md-none" for="inputPassword">Age to:</label>
+            <input type="number" class="form-control ml-1"
+            style="width: 70px" name="maxAge"[(ngModel)]="userParams.maxAge">  </div>
+        <div class="col-md-auto col-12">
+            <label class="form-label d-md-none" for="inputPassword">Age to:</label>
+            <select name="gender" style="width: 130px;" [(ngModel)]="userParams.gender"class="form-control ml-1">
+                <option *ngFor="let gender of genderList" [value]="gender.value">{{gender.display}}</option>
+                </select>
+        </div>
+        <div class="col-md-auto col-12">
+            <button class="btn btn-primary " type="submit">Apply Filter</button>
+            <button (click)="resetFilters()" class="btn btn-info " type="submit">Reset Filter</button>
+        </div>
+    </div>
+</form>
+<!-- <div class="container mt-3">     
+    <form #form="ngForm" class="form-inline mb-3 " (ngSubmit)="loadMembers()" autocomplete="off">
+        <div class="row">
+            <div class="col-2">
+                <div class="form-group">
+                    <label >Age from: </label>
+                    <input type="number" class="form-control ml-1"
+                    style="width: 70px" name="minAge"[(ngModel)]="userParams.minAge">
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="form-group px-2">
+                    <label >Age to: </label>
+                    <input type="number" class="form-control ml-1"
+                    style="width: 70px" name="maxAge"[(ngModel)]="userParams.maxAge">
+                </div>
+            </div>
+        </div>    
+            
+           <div class="form-group px-2">
+                <label >Show: </label>
+                <select name="gender" style="width: 130px;"class="form-control ml-1">
+                <option *ngFor="let gender of genderList" [value]="gender.value">{{gender.display}}</option>
+                </select>
+            </div>
+            <button class="btn btn-primary" type="submit">Apply Filter</button>
+            <button (click)="resetFilters()" class="btn btn-info" type="submit">Apply Filter</button>
+              
+    </form>
+</div> -->
+
 <div class="row">
 
     <div *ngFor="let member of  members"class="col-2">
