--- a/src/app/members/member-list/member-list.component.html
+++ b/src/app/members/member-list/member-list.component.html
@@ -1,29 +1,55 @@
 <div class="text-center mt-3">
     <h2 *ngIf="pagination">Your matches - {{pagination.totalItem}} found</h2>
 </div>
-<form #form="ngForm" class="form-inline mb-3 " (ngSubmit)="loadMembers()" autocomplete="off">
-    <div class="row align-items-center g-3">
-        <div class="col-md-auto col-12">
-            <label class="form-label d-md-none" >Age from: </label>
-            <input type="number" class="form-control ml-1"
-                    style="width: 70px" name="minAge"[(ngModel)]="userParams.minAge">
+
+<div class="container mt-3">
+    <form #form="ngForm" class="d-flex mb-3" (ngSubmit)="loadMembers()" autocomplete="off">
+        <div class="d-flex mx-2">
+            <label class="col-form-label me-2">Age from: </label>
+            <input type="number" class="form-control ml-1" style="width: 70px;" name="minAge" 
+                [(ngModel)]="userParams.minAge">
         </div>
-        <div class="col-md-auto col-12">
-            <label class="form-label d-md-none" for="inputPassword">Age to:</label>
-            <input type="number" class="form-control ml-1"
-            style="width: 70px" name="maxAge"[(ngModel)]="userParams.maxAge">  </div>
-        <div class="col-md-auto col-12">
-            <label class="form-label d-md-none" for="inputPassword">Age to:</label>
-            <select name="gender" style="width: 130px;" [(ngModel)]="userParams.gender"class="form-control ml-1">
-                <option *ngFor="let gender of genderList" [value]="gender.value">{{gender.display}}</option>
-                </select>
+
+        <div class="d-flex px-2">
+            <label class="col-form-label me-2">Age to: </label>
+            <input type="number" class="form-control ml-1" style="width: 70px;" name="maxAge" 
+                [(ngModel)]="userParams.maxAge">
         </div>
-        <div class="col-md-auto col-12">
-            <button class="btn btn-primary " type="submit">Apply Filter</button>
-            <button (click)="resetFilters()" class="btn btn-info " type="submit">Reset Filter</button>
+
+        <div class="d-flex px-2">
+            <label class="col-form-label me-2">Show: </label>
+            <select name="gender" style="width: 130px" [(ngModel)]="userParams.gender" class="form-control ml-1">
+                <option *ngFor="let gender of genderList" [value]="gender.value">
+                    {{gender.display}}
+                </option>
+            </select>
         </div>
-    </div>
-</form>
+
+        <button class="btn btn-primary ms-1" type="submit">Apply Filters</button>
+        <button (click)="resetFilters()" class="btn btn-info ms-1" type="submit">Reset Filters</button>
+        <div class="col">
+            <div class="btn-group float-end">
+                <button 
+                    type="button"
+                    class="btn btn-primary ms-1" 
+                    name='orderBy' 
+                    (click)="loadMembers()"
+                    btnRadio='lastActive'
+                    [(ngModel)]="userParams.orderBy">Last Active</button>
+    
+                <button 
+                    type="button"
+                    class="btn  btn-info ms-1" 
+                    name='orderBy' 
+                    (click)="loadMembers()"
+                    btnRadio='created'
+                    [(ngModel)]="userParams.orderBy">Newest Members</button>
+            </div>
+        </div>
+        
+
+    </form>
+</div>
 <!-- <div class="container mt-3">     
     <form #form="ngForm" class="form-inline mb-3 " (ngSubmit)="loadMembers()" autocomplete="off">
         <div class="row">
